# mlops-diabetes-project

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  model.pkl  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: config.yaml
scripts/: train_model.py
src/api/: main.py
src/data/: loader.py
src/evaluation/: metrics.py
src/features/: engineer.py
src/models/: trainer.py
