[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-diabetes-model"
version = "0.1.0"
description = "Diabetic Risk Prediction Model with MLOps Pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sambit Mohanty", email = "sambit.mohanty@example.com"},
]
keywords = ["machine-learning", "diabetes", "mlops", "prediction", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.2.0",
    "mlflow>=2.7.0",
    "optuna>=3.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
mlops = [
    "mlflow>=2.7.0",
    "dvc>=3.27.0",
    "wandb>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/sambit-mohanty2/mlops-diabetes-project"
Documentation = "https://github.com/sambit-mohanty2/mlops-diabetes-project/docs"
Repository = "https://github.com/sambit-mohanty2/mlops-diabetes-project.git"
"Bug Tracker" = "https://github.com/sambit-mohanty2/mlops-diabetes-project/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config/*",
]

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",
]

[tool.pylint.format]
max-line-length = 100
